--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "antd": "^5.27.4",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
