--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
+    "morgan": "^1.10.1",
     "openai": "^5.20.3"
   }
 }
